// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RealtimeMessagingIntegrationPreferences component should not render emailCapture if the integration is of type Facebook 1`] = `
<Connect(RealtimeMessagingIntegrationPreferences)
  integration={
    Immutable.Map {
      type: "facebook",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <RealtimeMessagingIntegrationPreferences
    integration={
      Immutable.Map {
        type: "facebook",
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    updateOrCreateIntegration={[Function]}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            tag="ol"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations"
              >
                Integrations
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/facebook"
              >
                Facebook, Messenger & Instagram
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            />
            <BreadcrumbItem
              active={true}
              tag="li"
            >
              Preferences
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="d-flex align-items-center justify-content-between flex-wrap page-header"
        >
          <Breadcrumb
            tag="ol"
          >
            <ol
              className="breadcrumb"
            >
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Integrations
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations/facebook"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Facebook, Messenger & Instagram
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                />
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                <li
                  className="active breadcrumb-item"
                >
                  Preferences
                </li>
              </BreadcrumbItem>
            </ol>
          </Breadcrumb>
        </div>
      </PageHeader>
      <RealtimeMessagingIntegrationNavigation
        integration={
          Immutable.Map {
            type: "facebook",
          }
        }
      >
        <SecondaryNavbar>
          <Navbar
            className="navbar"
            expand={false}
            tag="nav"
          >
            <nav
              className="navbar navbar"
            >
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/facebook/undefined/overview"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Overview
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/facebook/undefined/customer_chat"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Customer chat
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/facebook/undefined/preferences"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Preferences
                </a>
              </Link>
            </nav>
          </Navbar>
        </SecondaryNavbar>
      </RealtimeMessagingIntegrationNavigation>
      <Container
        className="page-container"
        fluid={true}
        tag="div"
      >
        <div
          className="page-container container-fluid"
        >
          <Form
            onSubmit={[Function]}
            tag="form"
          >
            <form
              className=""
              onSubmit={[Function]}
            >
              <div
                className="mb-4"
              >
                <h4>
                  Away auto-responder
                </h4>
                <p>
                  When your team is not available to chat, you can configure an auto-response for your
                   
                  customers.
                </p>
                <div
                  className="mb-3"
                >
                  <BooleanField
                    label="Enable auto-responder when no agent is available for chat"
                    name="autoResponderEnabled"
                    onChange={[Function]}
                    type="checkbox"
                    value={false}
                  >
                    <FormGroup
                      check={true}
                      className=""
                      color=""
                      tag="div"
                    >
                      <div
                        className="form-check"
                        color=""
                      >
                        <Label
                          check={true}
                          className="control-label"
                          htmlFor="id-autoResponderEnabled"
                          tag="label"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <label
                            className="control-label form-check-label "
                            htmlFor="id-autoResponderEnabled"
                          >
                            <Input
                              checked={false}
                              className="form-check-input"
                              id="id-autoResponderEnabled"
                              onChange={[Function]}
                              type="checkbox"
                            >
                              <input
                                checked={false}
                                className="form-check-input form-check-input"
                                id="id-autoResponderEnabled"
                                onChange={[Function]}
                                type="checkbox"
                              />
                            </Input>
                            <span>
                              Enable auto-responder when no agent is available for chat
                            </span>
                          </label>
                        </Label>
                      </div>
                    </FormGroup>
                  </BooleanField>
                </div>
                <InputField
                  label="Auto-responder text"
                  name="autoResponderText"
                  onChange={[Function]}
                  required={true}
                  rows="3"
                  type="textarea"
                  value="We're away at the moment. Leave us your email and we'll follow up shortly."
                >
                  <FormGroup
                    className="required"
                    color=""
                    tag="div"
                  >
                    <div
                      className="required form-group"
                      color=""
                    >
                      <Label
                        className="control-label"
                        htmlFor="id-autoResponderText"
                        tag="label"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                      >
                        <label
                          className="control-label "
                          htmlFor="id-autoResponderText"
                        >
                          Auto-responder text
                        </label>
                      </Label>
                      <div
                        className=""
                      >
                        <Input
                          className=""
                          id="id-autoResponderText"
                          onChange={[Function]}
                          required={true}
                          rows="3"
                          type="textarea"
                          value="We're away at the moment. Leave us your email and we'll follow up shortly."
                        >
                          <textarea
                            className="form-control"
                            id="id-autoResponderText"
                            onChange={[Function]}
                            required={true}
                            rows="3"
                            type="textarea"
                            value="We're away at the moment. Leave us your email and we'll follow up shortly."
                          />
                        </Input>
                      </div>
                    </div>
                  </FormGroup>
                </InputField>
              </div>
              <div
                className="mb-4"
              >
                <h4>
                  Inactivity settings
                </h4>
                <InputField
                  help="After a certain period without any new message on a chat ticket, Gorgias will create a new ticket the next time the customer contacts you over chat."
                  label="Inactivity period between chat tickets"
                  name="timeBeforeSplit"
                  onChange={[Function]}
                  type="select"
                  value={86400}
                >
                  <FormGroup
                    className=""
                    color=""
                    tag="div"
                  >
                    <div
                      className="form-group"
                      color=""
                    >
                      <Label
                        className="control-label"
                        htmlFor="id-timeBeforeSplit"
                        tag="label"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                      >
                        <label
                          className="control-label "
                          htmlFor="id-timeBeforeSplit"
                        >
                          Inactivity period between chat tickets
                        </label>
                      </Label>
                      <div
                        className=""
                      >
                        <Input
                          className=""
                          id="id-timeBeforeSplit"
                          onChange={[Function]}
                          type="select"
                          value={86400}
                        >
                          <select
                            className="form-control"
                            id="id-timeBeforeSplit"
                            onChange={[Function]}
                            type="select"
                            value={86400}
                          >
                            <option
                              value={1800}
                            >
                              30 minutes
                            </option>
                            <option
                              value={10800}
                            >
                              3 hours
                            </option>
                            <option
                              value={21600}
                            >
                              6 hours
                            </option>
                            <option
                              value={86400}
                            >
                              1 day
                            </option>
                            <option
                              value={604800}
                            >
                              7 days
                            </option>
                          </select>
                        </Input>
                      </div>
                      <FormText
                        color="muted"
                        tag="small"
                      >
                        <small
                          className="form-text text-muted"
                        >
                          After a certain period without any new message on a chat ticket, Gorgias will create a new ticket the next time the customer contacts you over chat.
                        </small>
                      </FormText>
                    </div>
                  </FormGroup>
                </InputField>
              </div>
              <div>
                <Button
                  className=""
                  color="success"
                  disabled={false}
                  tag="button"
                  type="submit"
                >
                  <button
                    className="btn btn-success"
                    disabled={false}
                    onClick={[Function]}
                    type="submit"
                  >
                    Save changes
                  </button>
                </Button>
              </div>
            </form>
          </Form>
        </div>
      </Container>
    </div>
  </RealtimeMessagingIntegrationPreferences>
</Connect(RealtimeMessagingIntegrationPreferences)>
`;

exports[`RealtimeMessagingIntegrationPreferences component should not render emailCapture if the integration is of type Smooch 1`] = `
<Connect(RealtimeMessagingIntegrationPreferences)
  integration={
    Immutable.Map {
      type: "smooch",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <RealtimeMessagingIntegrationPreferences
    integration={
      Immutable.Map {
        type: "smooch",
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    updateOrCreateIntegration={[Function]}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            tag="ol"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations"
              >
                Integrations
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch"
              >
                Smooch
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            />
            <BreadcrumbItem
              active={true}
              tag="li"
            >
              Preferences
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="d-flex align-items-center justify-content-between flex-wrap page-header"
        >
          <Breadcrumb
            tag="ol"
          >
            <ol
              className="breadcrumb"
            >
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Integrations
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations/smooch"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Smooch
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                />
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                <li
                  className="active breadcrumb-item"
                >
                  Preferences
                </li>
              </BreadcrumbItem>
            </ol>
          </Breadcrumb>
        </div>
      </PageHeader>
      <RealtimeMessagingIntegrationNavigation
        integration={
          Immutable.Map {
            type: "smooch",
          }
        }
      >
        <SecondaryNavbar>
          <Navbar
            className="navbar"
            expand={false}
            tag="nav"
          >
            <nav
              className="navbar navbar"
            >
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch/undefined/overview"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Overview
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch/undefined/preferences"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Preferences
                </a>
              </Link>
            </nav>
          </Navbar>
        </SecondaryNavbar>
      </RealtimeMessagingIntegrationNavigation>
      <Container
        className="page-container"
        fluid={true}
        tag="div"
      >
        <div
          className="page-container container-fluid"
        >
          <Form
            onSubmit={[Function]}
            tag="form"
          >
            <form
              className=""
              onSubmit={[Function]}
            >
              <div
                className="mb-4"
              >
                <h4>
                  Away auto-responder
                </h4>
                <p>
                  When your team is not available to chat, you can configure an auto-response for your
                   
                  customers.
                </p>
                <div
                  className="mb-3"
                >
                  <BooleanField
                    label="Enable auto-responder when no agent is available for chat"
                    name="autoResponderEnabled"
                    onChange={[Function]}
                    type="checkbox"
                    value={false}
                  >
                    <FormGroup
                      check={true}
                      className=""
                      color=""
                      tag="div"
                    >
                      <div
                        className="form-check"
                        color=""
                      >
                        <Label
                          check={true}
                          className="control-label"
                          htmlFor="id-autoResponderEnabled"
                          tag="label"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <label
                            className="control-label form-check-label "
                            htmlFor="id-autoResponderEnabled"
                          >
                            <Input
                              checked={false}
                              className="form-check-input"
                              id="id-autoResponderEnabled"
                              onChange={[Function]}
                              type="checkbox"
                            >
                              <input
                                checked={false}
                                className="form-check-input form-check-input"
                                id="id-autoResponderEnabled"
                                onChange={[Function]}
                                type="checkbox"
                              />
                            </Input>
                            <span>
                              Enable auto-responder when no agent is available for chat
                            </span>
                          </label>
                        </Label>
                      </div>
                    </FormGroup>
                  </BooleanField>
                </div>
                <InputField
                  label="Auto-responder text"
                  name="autoResponderText"
                  onChange={[Function]}
                  required={true}
                  rows="3"
                  type="textarea"
                  value="We're away at the moment. Leave us your email and we'll follow up shortly."
                >
                  <FormGroup
                    className="required"
                    color=""
                    tag="div"
                  >
                    <div
                      className="required form-group"
                      color=""
                    >
                      <Label
                        className="control-label"
                        htmlFor="id-autoResponderText"
                        tag="label"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                      >
                        <label
                          className="control-label "
                          htmlFor="id-autoResponderText"
                        >
                          Auto-responder text
                        </label>
                      </Label>
                      <div
                        className=""
                      >
                        <Input
                          className=""
                          id="id-autoResponderText"
                          onChange={[Function]}
                          required={true}
                          rows="3"
                          type="textarea"
                          value="We're away at the moment. Leave us your email and we'll follow up shortly."
                        >
                          <textarea
                            className="form-control"
                            id="id-autoResponderText"
                            onChange={[Function]}
                            required={true}
                            rows="3"
                            type="textarea"
                            value="We're away at the moment. Leave us your email and we'll follow up shortly."
                          />
                        </Input>
                      </div>
                    </div>
                  </FormGroup>
                </InputField>
              </div>
              <div
                className="mb-4"
              >
                <h4>
                  Inactivity settings
                </h4>
                <InputField
                  help="After a certain period without any new message on a chat ticket, Gorgias will create a new ticket the next time the customer contacts you over chat."
                  label="Inactivity period between chat tickets"
                  name="timeBeforeSplit"
                  onChange={[Function]}
                  type="select"
                  value={10800}
                >
                  <FormGroup
                    className=""
                    color=""
                    tag="div"
                  >
                    <div
                      className="form-group"
                      color=""
                    >
                      <Label
                        className="control-label"
                        htmlFor="id-timeBeforeSplit"
                        tag="label"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                      >
                        <label
                          className="control-label "
                          htmlFor="id-timeBeforeSplit"
                        >
                          Inactivity period between chat tickets
                        </label>
                      </Label>
                      <div
                        className=""
                      >
                        <Input
                          className=""
                          id="id-timeBeforeSplit"
                          onChange={[Function]}
                          type="select"
                          value={10800}
                        >
                          <select
                            className="form-control"
                            id="id-timeBeforeSplit"
                            onChange={[Function]}
                            type="select"
                            value={10800}
                          >
                            <option
                              value={1800}
                            >
                              30 minutes
                            </option>
                            <option
                              value={10800}
                            >
                              3 hours
                            </option>
                            <option
                              value={21600}
                            >
                              6 hours
                            </option>
                            <option
                              value={86400}
                            >
                              1 day
                            </option>
                            <option
                              value={604800}
                            >
                              7 days
                            </option>
                          </select>
                        </Input>
                      </div>
                      <FormText
                        color="muted"
                        tag="small"
                      >
                        <small
                          className="form-text text-muted"
                        >
                          After a certain period without any new message on a chat ticket, Gorgias will create a new ticket the next time the customer contacts you over chat.
                        </small>
                      </FormText>
                    </div>
                  </FormGroup>
                </InputField>
              </div>
              <div>
                <Button
                  className=""
                  color="success"
                  disabled={false}
                  tag="button"
                  type="submit"
                >
                  <button
                    className="btn btn-success"
                    disabled={false}
                    onClick={[Function]}
                    type="submit"
                  >
                    Save changes
                  </button>
                </Button>
              </div>
            </form>
          </Form>
        </div>
      </Container>
    </div>
  </RealtimeMessagingIntegrationPreferences>
</Connect(RealtimeMessagingIntegrationPreferences)>
`;

exports[`RealtimeMessagingIntegrationPreferences component should render the chat settings container 1`] = `
<Connect(RealtimeMessagingIntegrationPreferences)
  integration={
    Immutable.Map {
      type: "smooch_inside",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <RealtimeMessagingIntegrationPreferences
    integration={
      Immutable.Map {
        type: "smooch_inside",
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    updateOrCreateIntegration={[Function]}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            tag="ol"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations"
              >
                Integrations
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside"
              >
                Chat
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            />
            <BreadcrumbItem
              active={true}
              tag="li"
            >
              Preferences
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="d-flex align-items-center justify-content-between flex-wrap page-header"
        >
          <Breadcrumb
            tag="ol"
          >
            <ol
              className="breadcrumb"
            >
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Integrations
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations/smooch_inside"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Chat
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                />
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                <li
                  className="active breadcrumb-item"
                >
                  Preferences
                </li>
              </BreadcrumbItem>
            </ol>
          </Breadcrumb>
        </div>
      </PageHeader>
      <RealtimeMessagingIntegrationNavigation
        integration={
          Immutable.Map {
            type: "smooch_inside",
          }
        }
      >
        <SecondaryNavbar>
          <Navbar
            className="navbar"
            expand={false}
            tag="nav"
          >
            <nav
              className="navbar navbar"
            >
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/appearance"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Appearance
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/installation"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Installation
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/preferences"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Preferences
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/campaigns"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Campaigns
                </a>
              </Link>
            </nav>
          </Navbar>
        </SecondaryNavbar>
      </RealtimeMessagingIntegrationNavigation>
      <Container
        className="page-container"
        fluid={true}
        tag="div"
      >
        <div
          className="page-container container-fluid"
        >
          <Form
            onSubmit={[Function]}
            tag="form"
          >
            <form
              className=""
              onSubmit={[Function]}
            >
              <div
                className="mb-4"
              >
                <h4>
                  Email capture
                </h4>
                <p>
                  If a visitor is anonymous, we'll automatically ask for their email address.
                </p>
                <div
                  className="mb-3"
                >
                  <BooleanField
                    label="Enable email capture"
                    name="emailCaptureEnabled"
                    onChange={[Function]}
                    type="checkbox"
                    value={false}
                  >
                    <FormGroup
                      check={true}
                      className=""
                      color=""
                      tag="div"
                    >
                      <div
                        className="form-check"
                        color=""
                      >
                        <Label
                          check={true}
                          className="control-label"
                          htmlFor="id-emailCaptureEnabled"
                          tag="label"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <label
                            className="control-label form-check-label "
                            htmlFor="id-emailCaptureEnabled"
                          >
                            <Input
                              checked={false}
                              className="form-check-input"
                              id="id-emailCaptureEnabled"
                              onChange={[Function]}
                              type="checkbox"
                            >
                              <input
                                checked={false}
                                className="form-check-input form-check-input"
                                id="id-emailCaptureEnabled"
                                onChange={[Function]}
                                type="checkbox"
                              />
                            </Input>
                            <span>
                              Enable email capture
                            </span>
                          </label>
                        </Label>
                      </div>
                    </FormGroup>
                  </BooleanField>
                </div>
                <ButtonGroup
                  className="mb-3"
                  role="group"
                  tag="div"
                >
                  <div
                    className="mb-3 btn-group"
                    role="group"
                  >
                    <Button
                      color="info"
                      onClick={[Function]}
                      tag="button"
                      type="button"
                    >
                      <button
                        className="btn btn-info"
                        onClick={[Function]}
                        type="button"
                      >
                        Online
                      </button>
                    </Button>
                    <Button
                      color="secondary"
                      onClick={[Function]}
                      tag="button"
                      type="button"
                    >
                      <button
                        className="btn btn-secondary"
                        onClick={[Function]}
                        type="button"
                      >
                        Away
                      </button>
                    </Button>
                  </div>
                </ButtonGroup>
                <div>
                  <InputField
                    label="Email capture text"
                    name="emailCaptureOnlineTriggerText"
                    onChange={[Function]}
                    rows="3"
                    type="textarea"
                    value="Leave us your email in case we reply later."
                  >
                    <FormGroup
                      className=""
                      color=""
                      tag="div"
                    >
                      <div
                        className="form-group"
                        color=""
                      >
                        <Label
                          className="control-label"
                          htmlFor="id-emailCaptureOfflineTriggerText"
                          tag="label"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <label
                            className="control-label "
                            htmlFor="id-emailCaptureOfflineTriggerText"
                          >
                            Email capture text
                          </label>
                        </Label>
                        <div
                          className=""
                        >
                          <Input
                            className=""
                            id="id-emailCaptureOfflineTriggerText"
                            onChange={[Function]}
                            rows="3"
                            type="textarea"
                            value="Leave us your email in case we reply later."
                          >
                            <textarea
                              className="form-control"
                              id="id-emailCaptureOfflineTriggerText"
                              onChange={[Function]}
                              rows="3"
                              type="textarea"
                              value="Leave us your email in case we reply later."
                            />
                          </Input>
                        </div>
                      </div>
                    </FormGroup>
                  </InputField>
                  <InputField
                    label="Thanks for your email message"
                    name="emailCaptureOnlineThanksText"
                    onChange={[Function]}
                    rows="3"
                    type="textarea"
                    value="Thanks! We'll email you at {email} if you leave."
                  >
                    <FormGroup
                      className=""
                      color=""
                      tag="div"
                    >
                      <div
                        className="form-group"
                        color=""
                      >
                        <Label
                          className="control-label"
                          htmlFor="id-emailCaptureOfflineThanksText"
                          tag="label"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <label
                            className="control-label "
                            htmlFor="id-emailCaptureOfflineThanksText"
                          >
                            Thanks for your email message
                          </label>
                        </Label>
                        <div
                          className=""
                        >
                          <Input
                            className=""
                            id="id-emailCaptureOfflineThanksText"
                            onChange={[Function]}
                            rows="3"
                            type="textarea"
                            value="Thanks! We'll email you at {email} if you leave."
                          >
                            <textarea
                              className="form-control"
                              id="id-emailCaptureOfflineThanksText"
                              onChange={[Function]}
                              rows="3"
                              type="textarea"
                              value="Thanks! We'll email you at {email} if you leave."
                            />
                          </Input>
                        </div>
                      </div>
                    </FormGroup>
                  </InputField>
                </div>
              </div>
              <div
                className="mb-4"
              >
                <h4>
                  Away auto-responder
                </h4>
                <p>
                  When your team is not available to chat, you can configure an auto-response for your
                   
                  customers.
                </p>
                <div
                  className="mb-3"
                >
                  <BooleanField
                    label="Enable auto-responder when no agent is available for chat"
                    name="autoResponderEnabled"
                    onChange={[Function]}
                    type="checkbox"
                    value={false}
                  >
                    <FormGroup
                      check={true}
                      className=""
                      color=""
                      tag="div"
                    >
                      <div
                        className="form-check"
                        color=""
                      >
                        <Label
                          check={true}
                          className="control-label"
                          htmlFor="id-autoResponderEnabled"
                          tag="label"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <label
                            className="control-label form-check-label "
                            htmlFor="id-autoResponderEnabled"
                          >
                            <Input
                              checked={false}
                              className="form-check-input"
                              id="id-autoResponderEnabled"
                              onChange={[Function]}
                              type="checkbox"
                            >
                              <input
                                checked={false}
                                className="form-check-input form-check-input"
                                id="id-autoResponderEnabled"
                                onChange={[Function]}
                                type="checkbox"
                              />
                            </Input>
                            <span>
                              Enable auto-responder when no agent is available for chat
                            </span>
                          </label>
                        </Label>
                      </div>
                    </FormGroup>
                  </BooleanField>
                </div>
                <InputField
                  label="Auto-responder text"
                  name="autoResponderText"
                  onChange={[Function]}
                  required={true}
                  rows="3"
                  type="textarea"
                  value="We're away at the moment. Leave us your email and we'll follow up shortly."
                >
                  <FormGroup
                    className="required"
                    color=""
                    tag="div"
                  >
                    <div
                      className="required form-group"
                      color=""
                    >
                      <Label
                        className="control-label"
                        htmlFor="id-autoResponderText"
                        tag="label"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                      >
                        <label
                          className="control-label "
                          htmlFor="id-autoResponderText"
                        >
                          Auto-responder text
                        </label>
                      </Label>
                      <div
                        className=""
                      >
                        <Input
                          className=""
                          id="id-autoResponderText"
                          onChange={[Function]}
                          required={true}
                          rows="3"
                          type="textarea"
                          value="We're away at the moment. Leave us your email and we'll follow up shortly."
                        >
                          <textarea
                            className="form-control"
                            id="id-autoResponderText"
                            onChange={[Function]}
                            required={true}
                            rows="3"
                            type="textarea"
                            value="We're away at the moment. Leave us your email and we'll follow up shortly."
                          />
                        </Input>
                      </div>
                    </div>
                  </FormGroup>
                </InputField>
              </div>
              <div
                className="mb-4"
              >
                <h4>
                  Inactivity settings
                </h4>
                <InputField
                  help="After a certain period without any new message on a chat ticket, Gorgias will create a new ticket the next time the customer contacts you over chat."
                  label="Inactivity period between chat tickets"
                  name="timeBeforeSplit"
                  onChange={[Function]}
                  type="select"
                  value={10800}
                >
                  <FormGroup
                    className=""
                    color=""
                    tag="div"
                  >
                    <div
                      className="form-group"
                      color=""
                    >
                      <Label
                        className="control-label"
                        htmlFor="id-timeBeforeSplit"
                        tag="label"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                      >
                        <label
                          className="control-label "
                          htmlFor="id-timeBeforeSplit"
                        >
                          Inactivity period between chat tickets
                        </label>
                      </Label>
                      <div
                        className=""
                      >
                        <Input
                          className=""
                          id="id-timeBeforeSplit"
                          onChange={[Function]}
                          type="select"
                          value={10800}
                        >
                          <select
                            className="form-control"
                            id="id-timeBeforeSplit"
                            onChange={[Function]}
                            type="select"
                            value={10800}
                          >
                            <option
                              value={1800}
                            >
                              30 minutes
                            </option>
                            <option
                              value={10800}
                            >
                              3 hours
                            </option>
                            <option
                              value={21600}
                            >
                              6 hours
                            </option>
                            <option
                              value={86400}
                            >
                              1 day
                            </option>
                            <option
                              value={604800}
                            >
                              7 days
                            </option>
                          </select>
                        </Input>
                      </div>
                      <FormText
                        color="muted"
                        tag="small"
                      >
                        <small
                          className="form-text text-muted"
                        >
                          After a certain period without any new message on a chat ticket, Gorgias will create a new ticket the next time the customer contacts you over chat.
                        </small>
                      </FormText>
                    </div>
                  </FormGroup>
                </InputField>
              </div>
              <div>
                <Button
                  className=""
                  color="success"
                  disabled={false}
                  tag="button"
                  type="submit"
                >
                  <button
                    className="btn btn-success"
                    disabled={false}
                    onClick={[Function]}
                    type="submit"
                  >
                    Save changes
                  </button>
                </Button>
              </div>
            </form>
          </Form>
        </div>
      </Container>
    </div>
  </RealtimeMessagingIntegrationPreferences>
</Connect(RealtimeMessagingIntegrationPreferences)>
`;
